# Time-Machines-Builders-

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE_INTEGRATION.md  CLAUDE_QUICK_REFERENCE.md  CLAUDE_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  FULLSTACK_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  LICENSE  PROMPT_11_LANGUAGE_LIBRARY.md  PROMPT_11_STACK_PROFILE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP.md  TESTING.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  go.mod  pyproject.toml  renovate.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  integration_issue.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  container-deploy.yml  cross-repo-integration.yml  dependency-review.yml  dependency-updates.yml  deploy.yml  lint-test.yml  security-scan.yml
ai-service/: .env.example  Dockerfile  main.py  requirements.txt
ai-service/models/: nlp_model.py  time_series.py
ai-service/tests/: test_main.py
backend/: .env.example  .eslintrc.js  jest.config.js  package-lock.json  package.json
backend/src/: index.js  index.ts
backend/src/__tests__/: health.test.js
backend/src/config/: database.js  index.ts  validation.ts
backend/src/config/__tests__/: validation.test.ts
backend/src/controllers/: claude.controller.ts  openai.controller.ts
backend/src/middleware/: auth.js  error.middleware.ts  errorHandler.js  rateLimiter.js
backend/src/models/: Dataset.js  MLModel.js  Prediction.js  User.js
backend/src/routes/: auth.js  claude.routes.ts  datasets.js  models.js  openai.routes.ts  predictions.js
backend/src/sdk/: config.ts  factory.ts  index.ts  test-config.ts
backend/src/sdk/__tests__/: config.test.ts  new-messaging-adapters-simple.js  new-messaging-adapters.test.ts
backend/src/sdk/ai/: chroma.adapter.ts  huggingface.adapter.ts  langchain.adapter.ts  llamaindex.adapter.ts  openai.adapter.ts  openclaw.adapter.ts  pinecone.adapter.ts  weaviate.adapter.ts
backend/src/sdk/data/: ipfs.adapter.ts  postgres.adapter.ts  redis.adapter.ts  s3.adapter.ts
backend/src/sdk/messaging/: botbuilders.adapter.ts  discord.adapter.ts  manychat.adapter.ts  moltbook.adapter.ts  openclaw.adapter.ts  slack.adapter.ts
backend/src/sdk/web3/: anchor.adapter.ts  evm.adapter.ts  solana.adapter.ts
backend/src/services/: claude.service.ts  mongo.service.ts  openai.service.ts  postgres.service.ts
backend/src/telemetry/: index.ts
database/: mongodb-setup.md  postgres-schema.sql
docs/: NEW_MESSAGING_INTEGRATIONS.md
docs/api/: API.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx
frontend/src/components/: Layout.jsx  TimeSeriesChart.jsx
frontend/src/components/ClaudeToolkit/: ClaudeToolkit.tsx
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/DataVisualization/: DataVisualization.tsx
frontend/src/components/PromptInterface/: PromptInterface.tsx
frontend/src/pages/: Dashboard.jsx  Datasets.jsx  Login.jsx  Models.jsx  Predictions.jsx  Register.jsx
frontend/src/services/: api.js  api.service.ts
frontend/src/types/: index.ts
template-kit/fullstack-ai-toolkit/.github/: copilot-instructions.md
template-kit/fullstack-ai-toolkit/docs/: AI_GITLAB_BLUEPRINT.md  AI_SCRIPTS_BEST_PRACTICES.md  CYBERSECURITY_DIAGNOSTICS_TOOLKIT.md  SECURITY_PLATFORM_STRATEGY.md
template-kit/fullstack-ai-toolkit/scripts/diagnostics/: generate_security_summary.py
template-kit/fullstack-ai-toolkit/scripts/writing/: README.md
